--- a/css/styles.css
+++ b/css/styles.css
@@ -225,6 +225,8 @@ p {
 /* ===== Hero ===== */
 
 .hero {
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 200px;
   padding-bottom: 200px;
 
