--- a/css/styles.css
+++ b/css/styles.css
@@ -170,15 +170,13 @@ p {
 }
 
 .link.current::after {
-  display: flex;
   position: absolute;
   content: "";
   right: 0;
   bottom: -1px;
   width: 100%;
   height: 4px;
-  align-self: flex-end;
-  flex-shrink: 0;
+
   border-radius: 2px;
 
   background-color: var(--accent-color);
@@ -570,6 +568,10 @@ p {
   color: var(--secondary-text-color);
 }
 
+.join-container .social-icon {
+  fill: var(--primary-background-color);
+}
+
 .join-container {
   max-width: 206px;
   margin-left: 70px;
@@ -737,7 +739,8 @@ p {
   background-color: var(--primary-background-color);
 }
 
-.card-link:hover {
+.card-link:hover,
+.card-link:focus {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
@@ -763,7 +766,8 @@ p {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.card-link:hover .gallery-text {
+.card-link:hover .gallery-text,
+.card-link:focus .gallery-text {
   transform: translateY(-100%);
 }
 /* ===== End Gallery ===== */
